semgrep/tests/e2e/snapshots/test_rule_parser/test_rule_parser__failure__error_messages/bad11/error.txt
error: null values prohibited
  --> rules/syntax/bad11.yaml:2
1 | rules:
2 |   - null
  |     ^^^^
3 |   - id: rule-with-null-values

In semgrep YAML configuration, null values are prohibited

